# lost-metrics-app

./: Cargo.toml  README.md  build.rs  default_settings.json  require_admin.manifest  tauri.conf.json
.github/workflows/: ci.yml
src/: app_ready_state.rs  aws_iprange.rs  background_worker.rs  error.rs  fake_encounter.rs  hook.rs  lib.rs  main.rs  models.rs  process_watcher.rs  processor.rs  settings_manager.rs  setup.rs  updater.rs
src/handlers/: get_past_encounters.rs  get_simulation_templates.rs  get_stats.rs  load.rs  mod.rs  run_simulation.rs  save_settings.rs  settings.rs
