[package]
name = "lost-metrics-app"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "lost_metrics_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tokio = { version = "1.41.0", features = ["rt", "macros"] }
tauri = { version = "2.2.5", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-log = "2.2.2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.5.1"
tauri-plugin-window-state = "2.2.1"
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = "3.5.1"
serde_json = "1"
sysinfo = "0.33.1"
chrono = "0.4.31"
log = "0.4.22"
